<resources>
    <string name="app_name">Baking App</string>
    <!-- Images content description -->
    <string name="recipe_image_content_description">Recipe image</string>
    <string name="expand_more_image_content_description">Expand more ingredients list image</string>
    <string name="expand_less_image_content_description">Expand less ingredients list image</string>

    <!-- Sample text -->
    <string name="recipe_name">Nutella Pie</string>
    <string name="recipe_servings">Serving for 8 people</string>
    <string name="recipe_servings_number">8</string>
    <string name="recipe_step_description">Recipe Step Description</string>
    <string name="ingredients">2 CUP Graham Cracker crumbs\n6 TBLSP unsalted butter, melted\n0.5 CUP granulated sugargranulated sugar\n1.5 TSP salt\n2 CUP Graham Cracker crumbs\n6 TBLSP unsalted butter, melted\n0.5 CUP granulated sugargranulated sugar\n1.5 TSP salt\n
    </string>
    <string name="step_description">2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed.
    </string>
    <string name="ingredients_quantity">2</string>
    <string name="ingredients_measure">CUP</string>
    <string name="ingredients_name">Graham Cracker crumbs</string>

    <!-- Error messages-->
    <string name="network_error_message">Network error. Please check your internet connection and try again.</string>
    <string name="detail_error_message">Recipe data not available</string>
    <string name="step_error_message">Step data not available</string>

    <!-- Alert Dialog -->
    <string name="retry_button_title">Retry</string>
    <string name="alert_dialog_title">Warning!</string>

    <!-- Sections Title -->
    <string name="steps_title">Steps</string>
    <string name="ingredients_title">Ingredients</string>


    <string name="servings_text_with_placeholder">Serving for %1$s people</string>
    <string name="steps_count_with_placeholder">%1$s of %2$s</string>


    <!-- Widget -->
    <string name="widget_id">App Widget ID\u0020</string>
    <string name="URL">Tap to launch URL</string>
    <string name="update">Tap to update</string>
    <string name="last_update">Last Update</string>
    <string name="time">%1$s</string>
    <string name="select_a_recipe">Select a recipe</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>

</resources>
