<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/ingredients_quantity"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/ingredients_measure" />

    <TextView
        android:id="@+id/tv_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_name" />

</LinearLayout>