<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.CardContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin"
    android:layout_marginEnd="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginStart="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_recipe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_grid_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recipe_image_content_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/nutella_pie" />

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/recipe_name"
            android:textSize="@dimen/text_sz_extra_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_recipe_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/recipe_servings"
            android:textSize="@dimen/text_sz_small" />

    </LinearLayout>

</android.support.v7.widget.CardView>