<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_old_paper"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredients_title"
                    style="@style/sectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_title"
                    android:textSize="@dimen/text_sz_medium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/servings_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_right_servings"
                    android:layout_marginTop="@dimen/margin_top_servings"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_servings_image"
                        android:layout_marginEnd="@dimen/margin_extra_small"
                        android:layout_marginTop="@dimen/margin_top_servings_image"
                        app:srcCompat="@drawable/ic_servings_black_24dp" />

                    <TextView
                        android:id="@+id/tv_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_servings_text"
                        android:text="@string/recipe_servings_number"
                        android:textSize="@dimen/text_sz_servings"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/arrow_down_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:background="@drawable/ic_expand_more_black_24dp"
                    android:clickable="true"
                    android:contentDescription="@string/expand_more_image_content_description"
                    android:focusable="true" />

                <ImageButton
                    android:id="@+id/arrow_up_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:background="@drawable/ic_expand_less_black_24dp"
                    android:clickable="true"
                    android:contentDescription="@string/expand_less_image_content_description"
                    android:focusable="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <ListView
                android:id="@+id/ingredients_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_large"
                android:divider="@color/colorPrimaryDark"
                android:dividerHeight="1dp"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>